@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.5rc1
 
 	- Documentation updates (STR #245, STR #250, STR #277,
 	  STR #281, STR #328, STR #338)
+	- Fl_File_Chooser did not allow manual entry of a drive
+	  letter (STR #339)
 	- Fl_Menu now uses the boxtype to redraw the menu
 	  background (STR #204)
 	- Fl_Scroll now shows the background image when a framed
